...
  TranslationsEn([super.locale = 'en']);

  @override
  String get users => 'Users';

  @override
  String get chats => 'Chats';

  @override
  String get groups => 'Groups';

  @override
  String get more => 'More';

  @override
  String get messageImage => 'Image';
...
  String get deleteAndExit => 'Delete and Exit';

  @override
  String get leaveGroup => 'Leave Group';

  @override
  String get createGroup => 'Create Group';

  @override
  String get sharedMedia => 'Shared Media';

  @override
  String get videoCall => 'Video call';
...
  String get password => 'Password';

  @override
  String get protected => 'Protected';

  @override
  String get newGroup => 'New Group';

  @override
  String get incorrectPassword => 'Incorrect Password';

  @override
  String get pleaseTryAnotherPassword => 'Please try another password';
...
  String get info => 'Info';

  @override
  String get messagePrivately => 'Message Privately';

  @override
  String get newChat => 'New Chat';

  @override
  String get typeYourMessage => 'Type your message...';

  @override
  String get oops => "Oops!";

  @override
  String get looksLikeSomethingWrong => "Looks like something went wrong.";
...
  @override
  String get block => 'Block';
  @override
  String get unBlock => 'Unblock';

  @override
  String get enterTheGroupName => 'Enter the group name';
  @override
  String get enterTheGroupPassword => 'Enter the group password';
  @override
  String get type => 'Type';
  @override
  String get createGroupEmptyString =>
      'Please fill in all required fields before creating a group.';
  @override
...
